feat-web: implemented a exericies using colors and fonts

--- a/web/exemplo16/estilo.css
+++ b/web/exemplo16/estilo.css
@@ -1,7 +1,13 @@
+@font-face {
+    font-family: "Bungee Tint";
+    src:
+      local("Bungee_Tint/BungeeTint-Regular.ttf"),
+      url("Bungee_Tint/BungeeTint-Regular.ttf")
+  }
 html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #0000ff;
 }
 
 body {
@@ -15,11 +21,12 @@ body {
 #secao1 {
     width: 50%;
     height: 50%;
-    background-color: #e8b141ff;
+    background-color: rgb(0, 0, 0);
     text-align: center;
 }
 #secao1>h1 {
    color: #4570b6ff;
+   font-family: "Bungee Tint", sans-serif;
 }
 
 
