--- a/projetos-flask/quinto-projeto/app/templates/home.html
+++ b/projetos-flask/quinto-projeto/app/templates/home.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Página inicial</h1>
-    <p>Seja bem vindo, Raimundo</p>
+    <p>Seja bem vindo, {{ session["usuario"].login }}</p>
 </body>
 </html>
