feat: finished promise async example with atividade

--- a/projeto-blueprint/templates/base.html
+++ b/projeto-blueprint/templates/base.html
@@ -44,7 +44,7 @@
   </div>
 
   <footer>
-    <p>Desenvolvido pela galera do 3ºB</p>
+    <p>Desenvolvido pela galera do 3º "A" </p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
